Fix scrollbar color for mozilla

--- a/pyrene/src/components/DateTimePicker/datePicker.css
+++ b/pyrene/src/components/DateTimePicker/datePicker.css
@@ -194,7 +194,7 @@
 
 .wrapper :global .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list{
   scrollbar-width: thin;
-  scrollbar-color: var(--neutral-500) var(--neutral-500);
+  scrollbar-color: var(--neutral-500) var(--neutral-030);
 }
 
 .wrapper :global .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list::-webkit-scrollbar-track {
